infra/k8s/base/nats.yaml
---
# Source: nats/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: nats
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.7
    helm.sh/chart: nats-1.1.6
  name: nats-headless
spec:
  clusterIP: None
  ports:
    - appProtocol: tcp
      name: nats
      port: 4222
      targetPort: nats
    - appProtocol: tcp
      name: cluster
      port: 6222
      targetPort: cluster
    - appProtocol: http
      name: monitor
      port: 8222
      targetPort: monitor
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: nats
    app.kubernetes.io/name: nats
---
# Source: nats/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: nats
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.7
    helm.sh/chart: nats-1.1.6
  name: nats
spec:
  ports:
    - appProtocol: tcp
      name: nats
      port: 4222
      targetPort: nats
  selector:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: nats
    app.kubernetes.io/name: nats
---
# Source: nats/templates/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: nats
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.7
    helm.sh/chart: nats-1.1.6
  name: nats
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: nats
      app.kubernetes.io/instance: nats
      app.kubernetes.io/name: nats
  serviceName: nats-headless
  template:
    metadata:
      annotations:
        checksum/config: 1fcec5fd33657da45e5cd1097e4d395712ace1bf69ad7e213c6b8e4908f448f4
      labels:
        app.kubernetes.io/component: nats
        app.kubernetes.io/instance: nats
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: nats
        app.kubernetes.io/version: 2.10.7
        helm.sh/chart: nats-1.1.6
    spec:
      containers:
        - args:
            - --config
            - /etc/nats-config/nats.conf
          image: nats:2.10.7-alpine
          lifecycle:
            preStop:
              exec:
                command:
                  - nats-server
                  - -sl=ldm=/var/run/nats/nats.pid
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz?js-enabled-only=true
              port: monitor
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: nats
          ports:
            - containerPort: 4222
              name: nats
            - containerPort: 6222
              name: cluster
            - containerPort: 8222
              name: monitor
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz?js-server-only=true
              port: monitor
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 90
            httpGet:
              path: /healthz
              port: monitor
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /etc/nats-config
              name: config
            - mountPath: /var/run/nats
              name: pid
            - mountPath: /data
              name: nats-js
        - args:
            - -pid
            - /var/run/nats/nats.pid
            - -config
            - /etc/nats-config/nats.conf
          image: natsio/nats-server-config-reloader:0.14.0
          name: reloader
          volumeMounts:
            - mountPath: /var/run/nats
              name: pid
            - mountPath: /etc/nats-config
              name: config
      enableServiceLinks: false
      shareProcessNamespace: true
      volumes:
        - configMap:
            name: nats-config
          name: config
        - emptyDir: {}
          name: pid
  volumeClaimTemplates:
    - metadata:
        name: nats-js
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
