infra/k8s/base/tickets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
  labels:
    app: tickets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: tickets
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: tickets
spec:
  selector:
    app: tickets
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
