infra/k8s/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ticketing
spec:
  rules:
    - host: ticketing.testing
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /api/tickets
            pathType: Prefix
            backend:
              service:
                name: tickets
                port:
                  number: 80
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payments
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
